# JDocuments

./: .gitignore
jdocuments-bridge/: bridge.c  meson.build
jdocuments-bridge/include/: TWAIN.h  bridge.h  twain.h
jdocuments-bridge/test/: bridge_test.c
jdocuments-commons/: Cargo.toml
jdocuments-commons/src/: lib.rs
jdocuments-doc-compiler-client/: Cargo.toml  build.rs
jdocuments-doc-compiler-client/slint/: doc-compiler.slint
jdocuments-doc-compiler-client/src/: main.rs
jdocuments-server/: compile.sh  configuration.json  pom.xml  run.bat
jdocuments-server/src/main/java/tech/jilge/server/: CloudAPI.java  CloudEventBus.java  HttpCloudChannel.java  HttpImplementedURI.java  UnsafeInstanceOperations.java
jdocuments-server/src/main/java/tech/jilge/server/auth/: HttpSessionQueryHandler.java  ICloudSession.java  ICloudUser.java  ICloudUserDatabase.java
jdocuments-server/src/main/java/tech/jilge/server/auth/impl/: DefaultCloudSessionImpl.java  DefaultCloudUserDatabaseImpl.java  DefaultCloudUserImpl.java
jdocuments-server/src/main/java/tech/jilge/server/bootstrap/: Bootstrap.java
jdocuments-server/src/main/java/tech/jilge/server/configuration/: CloudConfiguration.java  CloudConfigurationInfo.java  CloudConfigurationProperty.java  ICloudConfigurationProcessor.java
jdocuments-server/src/main/java/tech/jilge/server/configuration/impl/: DefaultCloudConfigurationProcessorImpl.java
jdocuments-server/src/main/java/tech/jilge/server/events/: CloudChannelEvent.java  CloudChannelReadEvent.java  CloudEvent.java  CloudShutdownEvent.java  CloudTerminalCommandEvent.java
jdocuments-server/src/main/java/tech/jilge/server/listeners/: CloudChannelReadListener.java  CloudReadCommandListener.java  CloudShutdownChannelListener.java  CloudUnexpectedExceptionListener.java
jdocuments-server/src/main/java/tech/jilge/server/log/: DefaultITerminalCompleter.java  IOTerminal.java  IOTerminalAnsiColor.java
jdocuments-server/src/main/java/tech/jilge/server/objects/: CloudSocketConfiguration.java  CloudUserSessionRegistry.java
jdocuments-submitter/: Cargo.toml  build.rs
jdocuments-submitter/src/: bridge.rs  main.rs  manual.rs  scanner.rs  storage.rs  ui.rs
jdocuments-submitter/ui/: manual.slint  submitter.slint
jdocuments-wasm-client/: Cargo.toml  build.rs  index.html  run.bat  run.sh  style.css
jdocuments-wasm-client/src/: lib.rs  main.rs
jdocuments-wasm-client/ui/: client.slint  components.slint  global.slint  legacy.slint
