[package]
name = "jdocuments-doc-compiler-client"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }
slint = { version = "1.12.1" }
jdocuments-commons = { path = "../jdocuments-commons" }

[build-dependencies]
slint-build = { version = "1.12.1" }