[package]
name = "jdocuments-wasm-client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
slint = { version = "1.12.1" }
log = "0.4.27"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }

[build-dependencies]
slint-build = { version = "1.12.1" }